added functionality for evaluation

--- a/OpenBioLink.ipynb
+++ b/OpenBioLink.ipynb
@@ -37,12 +37,12 @@
         "cellView": "form"
       },
       "source": [
-        "#@title PyG Installation EXTERNAL{ form-width: \"15%\" }\n",
-        "!pip install -q torch-scatter -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
-        "!pip install -q torch-sparse -f https://pytorch-geometric.com/whl/torch-1.9.0+cu111.html\n",
+        "#@title PyG 113 Installation EXTERNAL{ form-width: \"15%\" }\n",
+        "!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-1.10.0+cu113.html\n",
+        "!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-1.10.0+cu113.html\n",
         "!pip install -q git+https://github.com/rusty1s/pytorch_geometric.git"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
       },
       "source": [
         "#@title Module Imports HEADER { form-width: \"15%\" }\n",
-        "from openbiolink.obl2021 import OBL2021Dataset\n",
+        "from openbiolink.obl2021 import OBL2021Dataset, OBL2021Evaluator\n",
         "import torch\n",
         "from torch.nn import Module,\\\n",
         "                     ModuleList,\\\n",
@@ -85,8 +85,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_-0w2buqhHoS",
-        "cellView": "form"
+        "id": "_-0w2buqhHoS"
       },
       "source": [
         "#@title Global Variables CLASS { form-width: \"15%\" }\n",
@@ -98,10 +97,11 @@
         "  NUM_RELATIONS = 28\n",
         "  DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
         "  MINI_BATCH_SIZE = 32\n",
+        "  EVAL_BATCH_SIZE = 100\n",
         "  VAL_HITS_AT = 50\n",
         "  TEST_HITS_AT = 50"
       ],
-      "execution_count": 4,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -321,8 +321,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
-        "id": "WweaTsWIf9SI"
+        "id": "WweaTsWIf9SI",
+        "cellView": "form"
       },
       "source": [
         "#@title mini_batch_maker() FUNCTION { form-width: \"15%\" }\n",
@@ -377,6 +377,21 @@
         "  return graph"
       ],
       "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tEIE3vBEXq_1"
+      },
+      "source": [
+        "def check_corrupted(kg, negative_samples):\n",
+        "  for __index, candidate in enumerate(negative_samples):\n",
+        "    is_corrupt = not any(np.equal(knowledge_graph.numpy(), candidate.numpy().tolist()).all(1))\n",
+        "    if not is_corrupt:\n",
+        "      print(f'{candidate} is not a true corrupted edge')"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -528,6 +543,7 @@
       "source": [
         "#@title Model and Hyperparameters MAIN { form-width: \"15%\" }\n",
         "dataset = OBL2021Dataset()\n",
+        "kg = torch.cat((dataset.training, dataset.validation, dataset.testing), dim=0)\n",
         "model = GNN(\n",
         "    x_feature='one-hot',\n",
         "    conv_dims=[32, 32, 32, 32],\n",
@@ -708,131 +724,119 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4ciX_cKCvMHY",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "WYPeOqPxkFtD"
       },
       "source": [
-        "#@title Mostly Trash { form-width: \"15%\" }\n",
-        "# ! pip install deepsnap\n",
-        "# import deepsnap\n",
+        "#@title find possible candidates for psuedo-negative-triplets FUNCTIONS { form-width: \"15%\" }\n",
+        "\n",
+        "def find_start_and_end_indcs(entity, entity_type, kg_sorted):\n",
+        "  up = kg_sorted.shape[0]\n",
+        "  down = 0\n",
+        "  indx = kg_sorted.shape[0] // 2\n",
+        "  found = False\n",
+        "  if entity_type == Global.TAIL_INDEX.value:\n",
+        "    bound = 1\n",
+        "  elif entity_type == Global.HEAD_INDEX.value:\n",
+        "    bound = 0\n",
+        "  while down + bound < up:\n",
+        "    if kg_sorted[indx][entity_type].item() == entity:\n",
+        "      found = True\n",
+        "      break \n",
+        "    elif kg_sorted[indx][entity_type].item() >= entity: \n",
+        "      up = indx\n",
+        "      indx = (up + down) // 2\n",
+        "    else:\n",
+        "      down = indx \n",
+        "      indx = (up + down) // 2\n",
+        "  if not found:\n",
+        "    return None\n",
+        "  while 1:\n",
+        "    indx += 1\n",
+        "    try:\n",
+        "      if not kg_sorted[indx][entity_type].item() == entity:\n",
+        "        indx -= 1\n",
+        "        end_indx = indx\n",
+        "        break\n",
+        "    except:\n",
+        "      end_indx = indx - 1\n",
+        "      break\n",
+        "  \n",
+        "\n",
+        "  while 1:\n",
+        "    indx -= 1\n",
+        "    try:\n",
+        "      if not kg_sorted[indx][entity_type].item() == entity:\n",
+        "        indx += 1\n",
+        "        start_indx = indx\n",
+        "        break\n",
+        "    except:\n",
+        "      start_indx = indx + 1\n",
+        "      break\n",
+        "  return torch.tensor(range(start_indx, end_indx + 1))\n",
         "\n",
         "\n",
-        "# NX_graph = PyG.utils.to_networkx(train_graph)\n",
-        "# SX_graph = deepsnap.graph.Graph(NX_graph)\n",
+        "def get_psuedo_negative_triplets(entity, corrupt_at, kg):\n",
+        "  if corrupt_at == Global.HEAD_INDEX.value:\n",
+        "    entity_type = Global.TAIL_INDEX.value \n",
+        "  elif corrupt_at == Global.TAIL_INDEX.value:\n",
+        "    entity_type = Global.HEAD_INDEX.value\n",
+        "  kg = kg[torch.sort(kg[:, entity_type])[1]]\n",
+        "  indcs = find_start_and_end_indcs(entity, entity_type, kg_sorted=kg)\n",
+        "  if indcs is not None:\n",
+        "    fact_triplets_entities = kg_sorted[indcs][:, corrupt_at]\n",
+        "    return torch.tensor([ _ for _ in range(dataset.candidates.shape[0]) if _ not in fact_triplets_entities.tolist()]).to(Global.DEVICE.value)\n",
+        "  else:\n",
+        "    return dataset.candidates.to(Global.DEVICE.value)\n"
+      ],
+      "execution_count": 391,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "JDKhXGYJXWWY"
+      },
+      "source": [
+        "#@title Evalueation { form-width: \"15%\" }\n",
+        "dev_batches = torch.split(val_set, split_size_or_sections=Global.EVAL_BATCH_SIZE.value)\n",
         "\n",
-        "# SX_graph\n",
-        "# SX_graph.negative_sampling(SX_graph.edge_index, SX_graph.num_nodes, 100)\n",
-        "# #@title\n",
-        "# print(min([i[1].shape[0] for i in train_list]))\n",
-        "# #@title\n",
-        "# d = defaultdict(lambda: 0)\n",
-        "# for i in dataset.training:\n",
-        "#   h = i[0]\n",
-        "#   t = i[-1]\n",
-        "#   d[h.item()] += 1\n",
-        "#   d[t.item()] += 1\n",
-        "# new_list = list()\n",
-        "# other_list = list()\n",
-        "# ################################################################################################################\n",
-        "# new_candidates = torch.tensor(list(filter(lambda z: z[1] > 1000, sorted(d.items(), key= lambda z: z[1]))))[:, 0]\n",
-        "# ################################################################################################################\n",
-        "# for i in tqdm(dataset.training):\n",
-        "#   h = i[0]\n",
-        "#   t = i[-1]\n",
-        "#   if h in new_candidates or t in new_candidates:\n",
-        "#     new_list.append(i)\n",
-        "#   else:\n",
-        "#     other_list.append(i)\n",
-        "# #@title\n",
-        "# for i in train_list:\n",
-        "#   print(torch.unique(i[1]).shape)\n",
-        "# #@title\n",
+        "for dev_batch in tqdm(dev_batches[:-1]):\n",
+        "  for dev_triplet in dev_batch:\n",
+        "    head = dev_triplet[Global.HEAD_INDEX.value].item()\n",
+        "    relation = dev_triplet[Global.RELATION_INDEX.value].item()\n",
+        "    tail = dev_triplet[Global.TAIL_INDEX.value].item()\n",
         "\n",
-        "# # #@title Dataset Load and Train/Val/Test Split MAIN 2{ form-width: \"15%\" }\n",
-        "# # dataset = OBL2021Dataset()\n",
-        "# # train_set = dataset.training # torch.tensor of shape(num_train,3)\n",
-        "# # val_set = dataset.validation # torch.tensor of shape(num_val,3)\n",
-        "# # test_set = dataset.testing   # torch.tensor of shape(num_train,3)\n",
+        "    corrupted_tails = get_psuedo_negative_triplets(entity=head, corrupt_at=Global.TAIL_INDEX.value, kg=kg)\n",
+        "    num_psuedo_negative_triples = corrupted_tails.shape[0]\n",
+        "    psuedo_negative_triplets_tail = torch.vstack(\n",
+        "        (\n",
+        "            torch.ones(num_psuedo_negative_triples).to(Global.DEVICE.value) * head,\n",
+        "            torch.ones(num_psuedo_negative_triples).to(Global.DEVICE.value) * relation,\n",
+        "            corrupted_tails\n",
+        "        )\n",
+        "    ).t().to(Global.DEVICE.value)\n",
         "\n",
-        "# # train_supervision, train_messaging = torch.split(\n",
-        "# #     torch.stack(new_list)[torch.randperm(torch.stack(new_list).shape[0])],\n",
-        "# #     split_size_or_sections=(\n",
-        "# #         Global.TRAIN_SUPERVISION_SIZE.value,\n",
-        "# #         torch.stack(new_list).shape[0] - Global.TRAIN_SUPERVISION_SIZE.value\n",
-        "# #     )\n",
-        "# # )\n",
-        "# # train_supervision_data_loader = torch.split(train_supervision, split_size_or_sections=32)\n",
-        "# # train_supervision_negative_samples = [None for _ in range(Global.TRAIN_SUPERVISION_SIZE.value // 32)]\n",
-        "# # for i in range(Global.TRAIN_SUPERVISION_SIZE.value // 32):\n",
-        "# #   heads = train_supervision_data_loader[i][:, 0]\n",
-        "# #   relations = train_supervision_data_loader[i][:, 1]\n",
-        "# #   tails = train_supervision_data_loader[i][:, -1]\n",
-        "# #   negative_samples = torch.vstack(\n",
-        "# #       (heads, relations, torch.multinomial(dataset.candidates.type(torch.float), 32))\n",
-        "# #   ).t().contiguous()\n",
-        "# #   train_supervision_negative_samples[i] = negative_samples\n",
-        "# # knowledge_graph = torch.cat(\n",
-        "# #     (dataset.training, dataset.validation, dataset.testing),\n",
-        "# #     dim=0\n",
-        "# # )\n",
+        "    corrupted_heads = get_psuedo_negative_triplets(entity=tail, corrupt_at=Global.HEAD_INDEX.value, kg=kg)\n",
+        "    num_psuedo_negative_triples = corrupted_heads.shape[0]\n",
+        "    psuedo_negative_triplets_head = torch.vstack(\n",
+        "        (\n",
+        "            corrupted_heads,\n",
+        "            torch.ones(num_psuedo_negative_triples).to(Global.DEVICE.value) * relation,\n",
+        "            torch.ones(num_psuedo_negative_triples).to(Global.DEVICE.value) * tails\n",
+        "        )\n",
+        "    ).t().to(Global.DEVICE.value)\n",
         "\n",
-        "# # # for _index, mini_batch in enumerate(tqdm(train_supervision_negative_samples)):\n",
-        "# # #   for __index, candidate in enumerate(mini_batch):\n",
-        "# # #     is_corrupt = not any(np.equal(knowledge_graph.numpy(), candidate.numpy().tolist()).all(1))\n",
-        "# # #     if not is_corrupt:\n",
-        "# # #       print(f'{candidate} at [{_index}][{__index}] is not a true corrupted edge')\n",
+        "    # dev_triplet: (h, r, t)\n",
+        "    # psuedo_negative_triplets_head: (h′, r, t) for all h′\n",
+        "    # psuedo_negative_triplets_tail: (h, r, t′) for all t′\n",
         "\n",
-        "# #@title\n",
-        "\n",
-        "# torch.unique(torch.cat(\n",
-        "#     (train_messaging, torch.stack(other_list)),\n",
-        "#     dim=0\n",
-        "# )).shape\n",
-        "# #@title\n",
-        "# torch.split(\n",
-        "#     torch.tensor([_ for _ in range(1, 15)])[torch.randperm(14)],\n",
-        "#     split_size_or_sections = (7, 7)\n",
-        "# )\n",
-        "# #@title\n",
-        "# train_supervision, train_messaging = torch.split(\n",
-        "#     torch.stack(new_list),\n",
-        "#     split_size_or_sections=(\n",
-        "#         3,\n",
-        "#         torch.stack(new_list).shape[0] - 3\n",
-        "#     )\n",
-        "# )\n",
-        "# #@title\n",
-        "# torch.unique(train_messaging).shape\n",
-        "# #@title\n",
-        "# torch.unique(torch.stack(other_list + new_list)).shape\n",
-        "# # torch.cat(\n",
-        "# #     (train_messaging, torch.stack(other_list)),\n",
-        "# #     dim=0\n",
-        "# # ).shape\n",
-        "# # train_supervision.shape\n",
-        "# #@title\n",
-        "# # d = defaultdict(lambda: 0)\n",
-        "# # for i in dataset.training:\n",
-        "# #   h = i[0]\n",
-        "# #   t = i[-1]\n",
-        "# #   d[h.item()] += 1\n",
-        "# #   d[t.item()] += 1\n",
-        "# new_list = list()\n",
-        "# other_list = list()\n",
-        "# ################################################################################################################\n",
-        "# new_candidates = torch.tensor(list(filter(lambda z: z[1] > 1000, sorted(d.items(), key= lambda z: z[1]))))[:, 0]\n",
-        "# ################################################################################################################\n",
-        "# for i in tqdm(dataset.training):\n",
-        "#   h = i[0]\n",
-        "#   t = i[-1]\n",
-        "#   if h in new_candidates or t in new_candidates:\n",
-        "#     new_list.append(i)\n",
-        "#   else:\n",
-        "#     other_list.append(i)\n",
-        "\n",
-        "# #@title\n",
-        "# torch.stack(new_list).shape\n",
-        "# dataset.training.shape"
+        "    # train_set being the messaging graph, calculate the score for (h, r, t)\n",
+        "    # train_set being the messaging graph, calculate the scores for all (h′, r, t)\n",
+        "    # train_set being the messaging graph, calculate the scores for all (h, r, t′)\n",
+        "    \n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
